Implement IContainer#CreateFirewallRule
Also get rid of BlockAllOutBoundConnections. It turns out that windows
apply firewall rules in a crappy order (block rules take precendence
over allow rules). The new approach is to set the default behavior of
the firewall to block all outgoing connections and IronFrame will add
rules as needed when CreateFirewallRule is called.

--- a/IronFrame/IronFrame.csproj
+++ b/IronFrame/IronFrame.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ContainerHostClient.cs" />
     <Compile Include="ContainerHostDependencyHelper.cs" />
     <Compile Include="ContainerHostService.cs" />
+    <Compile Include="FirewallRuleSpec.cs" />
     <Compile Include="Utilities\Clock.cs" />
     <Compile Include="ContainerProcess.cs" />
     <Compile Include="ContainerUser.cs" />
