--- a/IronFrame.Test/IronFrame.Test.csproj
+++ b/IronFrame.Test/IronFrame.Test.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ContainerProcessTests.cs" />
     <Compile Include="ContainerTests.cs" />
     <Compile Include="ContainerUserTests.cs" />
+    <Compile Include="FirewallRuleSpecTest.cs" />
     <Compile Include="Handlers\StopProcessHandlerTests.cs" />
     <Compile Include="Internal\LocalFilePropertyServiceTests.cs" />
     <Compile Include="Messaging\MessageDispatcherTest.cs" />
