--- a/IronFrame/packages.config
+++ b/IronFrame/packages.config
@@ -3,4 +3,5 @@
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="SimpleImpersonation" version="1.0.1" targetFramework="net45" />
 </packages>
